--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@
 @tailwind utilities;
 
 html, body{
+    margin: 0;
+    padding: 0;
     font-family: "Fira Code", monospace;
-    background-color: #0f172a;
+    background-color: #f6efee;
+    color: #0f172a;
 }
 
   
