--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body{
     margin: 0;
     padding: 0;
     font-family: "Fira Code", monospace;
-    background-color: #f6efee;
+    background-color: #ffff;
     color: #0f172a;
 }
 
