--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ html, body{
     font-family: "Fira Code", monospace;
     background-color: #ffff;
     color: #0f172a;
+    scroll-behavior: smooth;
 }
 
 .custom-truncate{
